--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main class="main">
-      <div class="grid-container">Grid Container</div>
+      <div class="grid-container js-grid-container"></div>
     </main>
 
     <footer class="footer">
