Update layout for support mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </header>
 
     <main class="main">
-      <div class="grid-container js-grid-container"></div>
+        <div class="grid-container js-grid-container"></div>
+      </div>
+
+      <aside class="rightbar">
+      </aside>
     </main>
 
     <footer class="footer">
