Add change color tool

--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
     </header>
 
     <main class="main">
+      <aside class="leftbar">
+        <div class="toolbar">
+          <h2>Toolbar</h2>
+          <div class="toolbar-tools-container">
+
+            <div class="toolbar-item">
+              <label class="toolbar-item-title" for="ink-color">Ink Color</label>
+              <input type="color" name="ink-color" class="ink-color-tool">
+            </div>
+
+          </div>
+        </div>
+      </aside>
+
+      <div class="middlebar">
         <div class="grid-container js-grid-container"></div>
       </div>
 
