Add resizer tool

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
               <input type="color" name="ink-color" class="ink-color-tool">
             </div>
 
+            <div class="toolbar-item">
+              <label class="toolbar-item-title" for="resizer">Resize</label>
+              <input type="range" name="resizer" class="js-resizer-tool" value="16" min="16" max="96" step="8">
+              <div class="js-resizer-text-value">16</div>
+              <button class="js-resizer-button">Change</button>
+            </div>
+
           </div>
         </div>
       </aside>
