Change toolbar styles to be more user friendly

--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
 
             <div class="toolbar-item">
               <label class="toolbar-item-title" for="ink-color">Ink Color</label>
-              <input type="color" name="ink-color" class="ink-color-tool">
+              <div class="toolbar-item-body">
+                <input type="color" name="ink-color" class="ink-color-tool">
+                </divn>
+              </div>
             </div>
 
             <div class="toolbar-item">
               <label class="toolbar-item-title" for="resizer">Resize</label>
-              <input type="range" name="resizer" class="js-resizer-tool" value="16" min="16" max="96" step="8">
-              <div class="js-resizer-text-value">16</div>
-              <button class="js-resizer-button">Change</button>
+              <div class="toolbar-item-body">
+                <input type="range" name="resizer" class="js-resizer-tool" value="16" min="16" max="96" step="8">
+                <div class="js-resizer-text-value">16</div>
+                <button class="js-resizer-button btn btn--primary">Change</button>
+              </div>
             </div>
 
           </div>
-        </div>
       </aside>
 
       <div class="middlebar">
