Add pen and eraser buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
           <div class="toolbar-tools-container">
 
             <div class="toolbar-item">
+              <div class="flex">
+                <button class="js-pen-button btn btn--primary">Pen</button>
+                <button class="js-eraser-button btn btn--primary">Eraser</button>
+              </div>
+            </div>
+
+            <div class="toolbar-item">
               <label class="toolbar-item-title" for="ink-color">Ink Color</label>
               <div class="toolbar-item-body">
                 <input type="color" name="ink-color" class="ink-color-tool">
