Add info that the web not support touch mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </nav>
     </header>
 
+    <div class="box-danger--outlined">
+      <p>Warning! Sketchia currently not yet support touchscreen and mobile mode</p>
+    </div>
+
     <main class="main">
       <aside class="leftbar">
         <div class="toolbar">
